2001-02-13  John Harper  <jsh@eazel.com>

	* version 0.36

	* sawfish-about.jl.in, Makefile.in: install sawfish.png as
	sawfish-logo.png, then reference that file (ensures that the
	session manager splash screen doesn't pick up this file as the
	progress icon for sawfish - looks hideous)

2001-01-05  John Harper  <jsh@eazel.com>

	* version 0.35

2000-12-18  John Harper  <jsh@eazel.com>

	* sawfish-menu.jl (create-menu): recognize a new menu item
	attribute: `(shortcut . NAME)'. Adapted from Unai Uribarri
	<unaiur@telecable.es>

2000-12-10  John Harper  <jsh@eazel.com>

	* sawfish-client.jl: `sawfish-client' is now an alias for
	`sawfish-client -'

2000-12-04  John Harper  <jsh@eazel.com>

	* version 0.34

2000-11-22  John Harper  <jsh@eazel.com>

	* sawfish-about.jl.in: fixed __localedir__ substitution not
	being in a string

2000-11-16  John Harper  <jsh@eazel.com>

	* sawfish-about.jl.in, Makefile.in: substitute __localedir__
	into the script

2000-10-20  John Harper  <jsh@eazel.com>

	* sawfish-about.jl.in: changed email address, (c) message

2000-09-24  John Harper  <john@dcs.warwick.ac.uk>

	* sawfish-menu.jl: don't bother calling gtk_set_locale, this
	will be done automatically when the gtk plugin is loaded

2000-09-23  John Harper  <john@dcs.warwick.ac.uk>

	* sawfish-about.jl.in: added link to sawfish homepage

2000-09-20  John Harper  <john@dcs.warwick.ac.uk>

	* version 0.31

2000-09-17  John Harper  <john@dcs.warwick.ac.uk>

	* sawfish-menu.jl (create-menu): added `(insensitive . BOOL)'
	option to allow ghosted menu items

2000-09-08  John Harper  <john@dcs.warwick.ac.uk>

	* sawfish-about.jl.in: Open the necessary modules that aren't
	included in `rep' structure anymore (rep.regexp, rep.system,
	rep.io.streams, rep.io.files, rep.io.file-handlers)

2000-09-07  John Harper  <john@dcs.warwick.ac.uk>

	* sawfish-menu.jl: added a `(group . ID)' option, radio-items
	are created such that all items with the same ID are in the
	same radio group
