@@ -1,3 +1,8 @@
+2001-05-09  John Harper  <jsh@pixelslut.com>
+
+	* sawfish-about.jl.in: don't add the link to the iwc.org site,
+	since it disappeared a while ago..
+
 2001-02-13  John Harper  <jsh@eazel.com>
 
 	* version 0.36
